tests/reference/asr-implicit_typing2-1e706a4.stderr
semantic error: Variable 'x' is not declared
 --> tests/errors/implicit_typing2.f90:6:5
  |
6 |     x = 1
  |     ^ 'x' is undeclared
